--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </ul>
     </main>
     <section class="projects">
-      <h2>Projects</h2>
+      <h2>Projects & modules</h2>
       <ul>
         <li><a href="https://neosiae.github.io/memoria/">memoria</a></li>
 <li><a href="https://github.com/neosiae/depsjs">depsjs</a></li>
